# bca-communuity-stream-062823

guest/: Cargo.toml  build.sh  component.wasm  wasi_snapshot_preview1.wasm
guest/src/: lib.rs
host/: Cargo.toml
host/src/: main.rs
